# Kalshi-Trading-Bot

./: .env.example  .gitignore  README.md  pyproject.toml  start_archiver.bat
.github/workflows/: ci.yml
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: intro.mdx  project-scope.md  roadmap.md
docs-site/docs/architecture/: _category_.json  overview.md
docs-site/docs/runbooks/: _category_.json  archiver-operations.md  fetch-historical-data.md  run-a-backtest.md
docs-site/docs/status/: _category_.json  validation-history.md
docs-site/src/pages/: index.tsx
openspec/changes/core-data-and-backtesting/: design.md  notes.md  proposal.md  tasks.md
openspec/changes/paper-trading-and-notify/: proposal.md  tasks.md
scripts/: archiver_loop.py  fetch_historical.py  generate_env_example.py  run_backtest.py
src/kalshi_bot/: __init__.py
src/kalshi_bot/backtest/: __init__.py  engine.py  metrics.py
src/kalshi_bot/config/: __init__.py  settings.py
src/kalshi_bot/execution/: __init__.py  backtest_broker.py  broker_protocol.py
src/kalshi_bot/risk/: __init__.py  drawdown_guard.py  entry_throttle.py  kelly.py
src/kalshi_bot/signals/: black_scholes.py  monte_carlo.py  volatility.py
src/kalshi_bot/storage/: __init__.py  db.py  models.py  records.py
tests/backtest/: test_engine_known_answer.py
tests/integration/: test_kalshi_public_api.py
tests/unit/: conftest.py  test_backtest_broker.py  test_env_example_sync.py  test_kalshi_data.py  test_risk.py  test_settings.py  test_signals.py  test_storage.py  test_strategy.py
(+14 files in other folders)
