[project]
name = "kalshi-bot"
version = "0.1.0"
description = "Multi-market trading bot: Kalshi event contracts (crypto/weather/econ) + Webull defined-risk options. Backtest-first."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1.360",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_bot"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "scripts"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external sandbox APIs (excluded from default CI runs)",
]
addopts = "-m 'not integration'"
